src/objects/cwbtool__Connection__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__Current_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Enviroment__c</fullName>
        <label>Enviroment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Is_Active__c</fullName>
        <formula>if(( Now()-  LastModifiedDate ) * 24 * 60 * 60
+ ( VALUE(MID(TEXT(Now()),18,2)) - VALUE(MID(TEXT(LastModifiedDate ),18,2)) )&lt; cwbtool__Valid_Second__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Metadata_ServerUrl__c</fullName>
        <label>Metadata ServerUrl</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__OrgId__c</fullName>
        <label>Org Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__OrganizationName__c</fullName>
        <label>OrganizationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Satge__c</fullName>
        <formula>if(cwbtool__Is_Active__c,&apos;Active&apos;,&apos;InActive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Session_Time__c</fullName>
        <formula>( Now()- LastModifiedDate ) * 24 * 60 * 60 
+ ( VALUE(MID(TEXT(Now()),18,2)) - VALUE(MID(TEXT(LastModifiedDate ),18,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__UserEmail__c</fullName>
        <label>UserEmail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cwbtool__UserFullName__c</fullName>
        <label>UserFullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__UserId__c</fullName>
        <label>UserId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Valid_Second__c</fullName>
        <label>Valid Second</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Connection</label>
    <nameField>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>